// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalPageVoteThreshold /> should render proposal page vote threshold 1`] = `
<div
  className="proposal__page__vote_threshold"
>
  <div
    className="proposal__infos"
    style={
      Object {
        "marginTop": "-15px",
      }
    }
  >
    <h4>
      <FormattedMessage
        id="proposal.vote.threshold.title"
        values={Object {}}
      />
    </h4>
    <p
      className="proposal__page__vote_threshold__votes"
    >
      <i
        className="cap cap-hand-like-2-1"
      />
       
      <FormattedMessage
        id="proposal.vote.count"
        values={
          Object {
            "num": 30,
          }
        }
      />
    </p>
    <ProgressBar
      active={false}
      bsClass="progress-bar"
      bsStyle="success"
      isChild={false}
      label="30%"
      max={100}
      min={0}
      now={30}
      srOnly={false}
      striped={false}
    />
    <div>
      <FormattedMessage
        id="proposal.vote.threshold.progress"
        values={
          Object {
            "max": 100,
            "num": 70,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`<ProposalPageVoteThreshold /> should render proposal page vote threshold reached 1`] = `
<div
  className="proposal__page__vote_threshold"
>
  <div
    className="proposal__infos"
    style={
      Object {
        "marginTop": "-15px",
      }
    }
  >
    <h4>
      <FormattedMessage
        id="proposal.vote.threshold.reached"
        values={Object {}}
      />
    </h4>
    <p
      className="proposal__page__vote_threshold__votes"
    >
      <i
        className="cap cap-hand-like-2-1"
      />
       
      <FormattedMessage
        id="proposal.vote.count"
        values={
          Object {
            "num": 30,
          }
        }
      />
    </p>
    <ProgressBar
      active={false}
      bsClass="progress-bar"
      bsStyle="success"
      isChild={false}
      label="150%"
      max={150}
      min={0}
      now={150}
      srOnly={false}
      striped={false}
    />
    <div>
      <FormattedMessage
        id="proposal.vote.threshold.progress_reached"
        values={
          Object {
            "max": 20,
            "num": 30,
          }
        }
      />
    </div>
  </div>
</div>
`;
